--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,87 +1,89 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static 'core/images/logo.png' %}" height="30" alt="TEDxPOSTECH">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<header class="border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'core/images/logo.png' %}" height="30" alt="TEDxPOSTECH">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="mainNav">
+            <ul class="navbar-nav ml-auto">
 
-            {% if request.resolver_match.url_name == 'home' %}
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
-            </li>
-            {% endif %}
+                {% if request.resolver_match.url_name == 'home' %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+                </li>
+                {% endif %}
 
-            {% if request.resolver_match.url_name == 'about' %}
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
-            </li>
-            {% endif %}
+                {% if request.resolver_match.url_name == 'about' %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                </li>
+                {% endif %}
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pastEventsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Past Events
-                </a>
-                <div class="dropdown-menu" aria-labelledby="pastEventsDropdown">
-                    <a class="dropdown-item" href="#">2016 TEDxPOSTECH</a>
-                    <a class="dropdown-item" href="#">2015 TEDxPOSTECH</a>
-                    <a class="dropdown-item" href="#">2011 TEDxPOSTECH</a>
-                </div>
-            </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="pastEventsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Past Events
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="pastEventsDropdown">
+                        <a class="dropdown-item" href="#">2016 TEDxPOSTECH</a>
+                        <a class="dropdown-item" href="#">2015 TEDxPOSTECH</a>
+                        <a class="dropdown-item" href="#">2011 TEDxPOSTECH</a>
+                    </div>
+                </li>
 
-            {% if request.resolver_match.url_name == 'speakers' %}
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'speakers' %}">Speakers <span class="sr-only">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'speakers' %}">Speakers</a>
-            </li>
-            {% endif %}
+                {% if request.resolver_match.url_name == 'speakers' %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'speakers' %}">Speakers <span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'speakers' %}">Speakers</a>
+                </li>
+                {% endif %}
 
-            {% if request.resolver_match.url_name == 'organizers' %}
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'organizers' %}">Organizers <span class="sr-only">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'organizers' %}">Organizers</a>
-            </li>
-            {% endif %}
+                {% if request.resolver_match.url_name == 'organizers' %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'organizers' %}">Organizers <span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'organizers' %}">Organizers</a>
+                </li>
+                {% endif %}
 
-            {% if request.resolver_match.url_name == 'sponsors' %}
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'sponsors' %}">Sponsors <span class="sr-only">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'sponsors' %}">Sponsors</a>
-            </li>
-            {% endif %}
+                {% if request.resolver_match.url_name == 'sponsors' %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'sponsors' %}">Sponsors <span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'sponsors' %}">Sponsors</a>
+                </li>
+                {% endif %}
 
-            {% if request.resolver_match.url_name == 'register' %}
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'register' %}">Register <span class="sr-only">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">Register</a>
-            </li>
-            {% endif %}
+                {% if request.resolver_match.url_name == 'register' %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'register' %}">Register <span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+                {% endif %}
 
-        </ul>
-    </div>
-</nav>
+            </ul>
+        </div>
+    </nav>
+</header>
